--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -3,15 +3,14 @@ FROM martsime/dsscdb:latest
 RUN apt-get update
 RUN apt-get install build-essential -y
 
-RUN mkdir /code
-COPY requirements.txt /code/
-COPY requirements_prod.txt /code/
-
 ENV PATH /opt/conda/envs/rdkitenv/bin:$PATH
+
+RUN mkdir /code/
+COPY requirements.txt /code/requirements.txt
+COPY requirements_prod.txt /code/requirements_prod.txt
 
 RUN pip install -r /code/requirements.txt
 RUN pip install -r /code/requirements_prod.txt
 
-COPY . /code/
-WORKDIR /code
-RUN chmod +x /code/entrypoint.sh
+COPY entrypoint.sh /
+RUN chmod +x /entrypoint.sh
