--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,23 @@ language: python
 python:
     - "3.5"
 
-sudo: false
+before_install:
+ # download and install miniconda
+   - wget https://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh;
+   - bash miniconda.sh -b -p $HOME/conda
+   - export PATH="$HOME/conda/bin:$PATH"
+   - hash -r
+   - conda config --set always_yes yes --set changeps1 no
+   - conda update -q conda
+   # Useful for debugging any issues with conda
+   - conda info -a
+
+   # create and activate the build/test environment
+   - conda create -q -n tenv python=python3.5
+   - source activate tenv
 
 install:
+    - conda install -q -c rdkit
     - pip install -r src/requirements.txt
 
 before_script:
