Update travis.yml (#2)
* Update .travis.yml

* Update .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,14 +19,15 @@ before_install:
    - source activate tenv
 
 install:
-    - conda install -q -c rdkit
+    - conda install -q -c rdkit rdkit
     - pip install -r src/requirements.txt
 
 before_script:
     - python src/manage.py makemigrations
     - python src/manage.py migrate
 script:
-    - coverage run src/manage.py test
+    - cd src
+    - coverage run manage.py test
 
 after_success:
     - codecov
