Refactor docker setup: Debian based, updated to Python3.6 and added Openbabel

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,9 +1,11 @@
-FROM martsime/dsscdb:latest
+FROM continuumio/anaconda3
 
 RUN apt-get update
-RUN apt-get install build-essential zip postgresql -y
+RUN apt-get install build-essential zip postgresql-9.4 -y
 
-ENV PATH /opt/conda/envs/rdkitenv/bin:$PATH
+
+RUN conda install -c openbabel openbabel -y
+RUN conda install -c rdkit rdkit -y
 
 RUN mkdir /code/
 COPY requirements.txt /code/requirements.txt
@@ -12,5 +14,8 @@ COPY requirements_prod.txt /code/requirements_prod.txt
 RUN pip install -r /code/requirements.txt
 RUN pip install -r /code/requirements_prod.txt
 
+ENTRYPOINT [ "/usr/bin/tini", "--" ]
 COPY entrypoint.sh /
+
 RUN chmod +x /entrypoint.sh
+CMD ["bash", "entrypoint.sh"]
